--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,7 @@ img {
     background-color: var(--gris);
     width: min(60rem, 100%);
     margin: 0 auto;
-    padding: 2rem;
+    padding: 5rem 0;
     border-radius: 1rem;
 }
 
